// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Debe de funcionar correctamente el componente <GifExpertApp /> Debe de mostrar una lista de categorías 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Samurai X"
      key="Samurai X"
    />
    <GifGrid
      category="Simpsons"
      key="Simpsons"
    />
  </ol>
</Fragment>
`;

exports[`Debe de funcionar correctamente el componente <GifExpertApp /> Debe de renderizarse correctamente el componente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
